--- a/README.rdoc
+++ b/README.rdoc
@@ -2,9 +2,9 @@
 
 In your model:
 
-  class BlogPost < AR::B
+  class BlogPost < ActiveRecord::Base
     previewify :preview_only_methods => [:published_versions_by, :default_title],
-                :live_only_methods => [:cache]
+               :live_only_methods => [:cache]
 
     named_scope :old, :conditions => { :updated_at < 2.days.ago }
     named_scope :naughty, :conditions => ['body LIKE "%nipple%"']
@@ -69,7 +69,7 @@ In your controller:
     end
   end
 
-  == Contributing to previewify
+== Contributing to previewify
  
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
 * Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
@@ -81,5 +81,4 @@ In your controller:
 
 == Copyright
 
-Copyright (c) 2010 Gregory McIntyre. See LICENSE.txt for
-further details.
+Copyright (c) 2010. See AUTHORS for authors and LICENSE.txt for license details.
